deployment/kubernetes/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: roar-protocol
  labels:
    app.kubernetes.io/part-of: roar-protocol
